RESOLVED FIXED142245
[WK2] Fix memory leak in _getCookieHeadersForTask
https://bugs.webkit.org/show_bug.cgi?id=142245
Summary [WK2] Fix memory leak in _getCookieHeadersForTask
Chris Dumez
Reported 2015-03-03 16:40:20 PST
Fix memory leak in _getCookieHeadersForTask. We are leaking the CFDictionary returned by webKitCookieStorageCopyRequestHeaderFieldsForURL().
Attachments
Patch (2.02 KB, patch)
2015-03-03 16:43 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-03-03 16:43:55 PST
WebKit Commit Bot
Comment 2 2015-03-03 18:51:40 PST
Comment on attachment 247813 [details] Patch Clearing flags on attachment: 247813 Committed r180982: <http://trac.webkit.org/changeset/180982>
WebKit Commit Bot
Comment 3 2015-03-03 18:51:45 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.