[WK2] Fix memory leak in _getCookieHeadersForTask https://bugs.webkit.org/show_bug.cgi?id=142245

Reviewed by Alexey Proskuryakov.

Fix memory leak in _getCookieHeadersForTask. We are leaking the CFDictionary
returned by webKitCookieStorageCopyRequestHeaderFieldsForURL().

This patch addresses the issue by storing the return CFDictionary in a
RetainPtr<CFDictionaryRef>.

* Shared/mac/CookieStorageShim.mm:
(-[WKNSURLSessionLocal _getCookieHeadersForTask:completionHandler:]):


Canonical link: https://commits.webkit.org/160300@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180982 268f45cc-cd09-0410-ab3c-d52691b4dbfc