Source/WebKit2/Shared/mac/CookieStorageShim.mm
@@ -119,8 +119,9 @@ using CompletionHandlerBlock = void(^)(CFDictionaryRef);
 
     RetainPtr<NSURLSessionTask> strongTask = task;
     CompletionHandlerBlock completionHandlerCopy = [completionHandler copy];
-    RunLoop::main().dispatch([strongTask, completionHandlerCopy]{
-        completionHandlerCopy(WebKit::webKitCookieStorageCopyRequestHeaderFieldsForURL(nullptr, (CFURLRef)[[strongTask currentRequest] URL]));
+    RunLoop::main().dispatch([strongTask, completionHandlerCopy] {
+        RetainPtr<CFDictionaryRef> headers = adoptCF(WebKit::webKitCookieStorageCopyRequestHeaderFieldsForURL(nullptr, (CFURLRef)[[strongTask currentRequest] URL]));
+        completionHandlerCopy(headers.get());
         [completionHandlerCopy release];
     });
 }
